@@ -1,3 +1,9 @@
+May 10, 2010 edgbla <edgbla@yandex.ru>
+
+ * data/pcsx.glade2: Memory cards dialog is now resizable, icons were
+   enlarged and animated. (experimental,gtk)
+ * gui/MemcardDlg.c: Likewise.
+
 May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * libpcsxcore/psxcommon.c: Include ppf.h.
